--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <header>
-        <h1>Agrega una tarea </h1>
-        p
+  </head>
+  <body>
+    <header class="encabezado">
+      <h1>Agrega una tarea</h1>
+      <p>Vamos agrega una tarea!</p>
     </header>
-<main>
+  
+    <main class="contenedor">
+        <h3 class="centrar-texto">Tarea</h3>
 
-</main>
-<footer>
+        <div class="contacto-bg"></div>
 
-</footer>
+        <form class="formulario">
+            <div class="campo">
+                <label class="campo__label" for="nombre">Nombre</label>
+                <input 
+                    class="campo__field"
+                    type="text" 
+                    placeholder="Tu Nombre" 
+                    id="nombre"
+                >
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="email">E-mail</label>
+                <input 
+                    class="campo__field"
+                    type="email" 
+                    placeholder="Tu E-mail" 
+                    id="email"
+                >
+            </div>
+            <div class="campo">
+                <label class="campo__label" for="mensaje">Mensaje</label>
+                <textarea 
+                    placeholder="Describe un poco la tarea"
+                    class="campo__field campo__field--textarea"
+                    id="mensaje"
+                ></textarea>
+            </div>
 
-</body>
+            <div class="campo">
+                <input type="submit" value="Agregar" class="boton boton--primario">
+            </div>
+        </form>
+
+        
+    </main>
+    <footer></footer>
+  </body>
 </html>
