--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <header class="encabezado">
-      <h1>Agrega una tarea</h1>
-      <h3>CRUD</h3>
+      <h1 class="formato">Agrega una tarea</h1>
+      <h3 class="formato">CRUD</h3>
     </header>
 
     <main class="contenedor">
@@ -50,6 +50,8 @@
         </div>
       </form>
     </main>
-    <footer></footer>
+    <footer class="pie-de-pagina ">
+      <p class="centrar-texto">todos los derechos reservados </p> 
+    </footer>
   </body>
 </html>
