--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="campo">
-          <input type="submit" value="Agregar" class="boton boton--primario" />
+          <input onclick="agregaTarea()"  value="Agregar" class="boton boton--primario" />
         </div>
       </form>
       
@@ -54,5 +54,6 @@
     <footer class="pie-de-pagina ">
       <p class="centrar-texto">todos los derechos reservados </p> 
     </footer>
+    <script src="./js/app.js"></script>
   </body>
 </html>
