--- a/CRUDV2/index.html
+++ b/CRUDV2/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-<link rel="stylesheet" href="style.css">
-    <title>Prueba</title>
+<link rel="stylesheet" href="./styles/style.css">
+<link rel="stylesheet" href="./styles/normailize.css">
+    <title>CRUDV2</title>
 </head>
 <body>
     <h1>Tareas</h1>
@@ -49,6 +50,6 @@
     
         
     </div>
-<script src="appPrueba.js"></script>
+<script src="./js/appPrueba.js"></script>
 </body>
 </html>
