cambios de nombre

--- a/CRUDV3/index.html
+++ b/CRUDV3/index.html
@@ -33,7 +33,7 @@
       </form>
       <div id="listaActividades " class="mt-4">
         <!-- Div para js -->
-        <div class="alert alert-danger" role="alert">
+        <!-- <div class="alert alert-danger" role="alert">
           <i class="material-icons float-left mr-3"> 
             accessibility </i>
           <b>Texto de la actividad</b> - Estado
@@ -43,7 +43,7 @@
           </span>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Div para js -->
 
 
