--- a/CRUDV4/index.html
+++ b/CRUDV4/index.html
@@ -11,13 +11,16 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>CRUDV4</title>
   </head>
   <body>
     <div class="app">
@@ -29,56 +32,65 @@
       </div>
       <h5 class="text-center my-3">Ejercicios</h5>
 
-
-<!-- Modal -->
-<form
-  class="modal fade"
-  id="form"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">GYM</h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <p>Ejercicio</p>
-        <input type="text" class="form-control" name="" id="textInput" />
-        <div id="msg"></div>
-        <br />
-        <p>Fechas para hacer</p>
-        <input type="date" class="form-control" name="" id="dateInput" />
-        <br />
-        <p>Detalles de ejercicios</p>
-        <textarea
-          name=""
-          class="form-control"
-          id="textarea"
-          cols="30"
-          rows="5"
-        ></textarea>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
-        </button>
-        <button type="submit" id="add" class="btn btn-primary">Add</button>
-      </div>
-    </div>
-  </div>
-</form>
-    <div id="tasks"></div>
+      <!-- Modal -->
+      <form
+        class="modal fade"
+        id="form"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">GYM</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <p>Ejercicio</p>
+              <input type="text" class="form-control" name="" id="textInput" />
+              <div id="msg"></div>
+              <br />
+              <p>Fechas para hacer</p>
+              <input type="date" class="form-control" name="" id="dateInput" />
+              <br />
+              <p>Detalles de ejercicios</p>
+              <textarea
+                name=""
+                class="form-control"
+                id="textarea"
+                cols="30"
+                rows="5"
+              ></textarea>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="submit" id="add" class="btn btn-primary">
+                Add
+              </button>
+            </div>
+          </div>
+        </div>
+      </form>
+      <div id="tasks"></div>
     </div>
   </body>
   <script src="./js/app.js"></script>
-  <p>Todos los derechos reservados Cesar Reyes</p>
-  <p>Se creo con fines educativos</p>
+  <footer class="derechos">
+    <div class="derechos2">
+      <p>Todos los derechos reservados Cesar Reyes</p>
+      <p>Se creo con fines educativos</p>
+    </div>
+  </footer>
 </html>
