--- a/CRUDV4/index.html
+++ b/CRUDV4/index.html
@@ -58,6 +58,7 @@
               <br />
               <p>Fechas para hacer</p>
               <input type="date" class="form-control" name="" id="dateInput" />
+              <div id="msgDate" ></div>
               <br />
               <p>Detalles de ejercicios</p>
               <textarea
@@ -67,6 +68,7 @@
                 cols="30"
                 rows="5"
               ></textarea>
+              <div id="msgText" ></div>
             </div>
             <div class="modal-footer">
               <button
@@ -87,10 +89,10 @@
     </div>
   </body>
   <script src="./js/app.js"></script>
-  <footer class="derechos">
-    <div class="derechos2">
-      <p>Todos los derechos reservados Cesar Reyes</p>
-      <p>Se creo con fines educativos</p>
-    </div>
+  <footer class="fixed-bottom text-justify d-flex justify-content-center">
+    
+      <p>Todos los derechos reservados.</p>
+      <p> Se creo con fines educativos</p>
+    
   </footer>
 </html>
